ajustes, infos trocadas e layout

--- a/hospital-vivent-asa-sul.html
+++ b/hospital-vivent-asa-sul.html
@@ -35,8 +35,8 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
     </noscript>
-    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=y2sRnV">
-    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=y2sRnV" type="text/css">
+    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=pguopV">
+    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=pguopV" type="text/css">
 
 
 
@@ -184,9 +184,9 @@
             <div class="row mbr-gallery">
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0025.jpg" alt="" data-slide-to="0"
-                            data-bs-slide-to="0" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="0" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -195,9 +195,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0026.jpg" alt="" data-slide-to="1"
-                            data-bs-slide-to="1" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="1" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -206,9 +206,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0027.jpg" alt="" data-slide-to="2"
-                            data-bs-slide-to="2" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="2" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -217,9 +217,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0028.jpg" alt="" data-slide-to="3"
-                            data-bs-slide-to="3" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="3" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -228,9 +228,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0029.jpg" alt="" data-slide-to="4"
-                            data-bs-slide-to="4" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="4" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -239,9 +239,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0030.jpg" alt="" data-slide-to="5"
-                            data-bs-slide-to="5" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="5" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -250,9 +250,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0032.jpg" alt="" data-slide-to="6"
-                            data-bs-slide-to="6" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="6" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -261,9 +261,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0033.jpg" alt="" data-slide-to="7"
-                            data-bs-slide-to="7" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="7" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -272,9 +272,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0034.jpg" alt="" data-slide-to="8"
-                            data-bs-slide-to="8" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="8" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -283,9 +283,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0035.jpg" alt="" data-slide-to="9"
-                            data-bs-slide-to="9" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="9" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -294,9 +294,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0036.jpg" alt="" data-slide-to="10"
-                            data-bs-slide-to="10" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="10" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -305,9 +305,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0037.jpg" alt="" data-slide-to="11"
-                            data-bs-slide-to="11" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="11" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -316,9 +316,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image active">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ulmrn805J0-modal" data-bs-target="#ulmrn805J0-modal">
+                        data-target="#ulmvXKyFPS-modal" data-bs-target="#ulmvXKyFPS-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0039.jpg" alt="" data-slide-to="12"
-                            data-bs-slide-to="12" data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0">
+                            data-bs-slide-to="12" data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -334,11 +334,11 @@
 
             </div>
 
-            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="ulmrn805J0-modal">
+            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="ulmvXKyFPS-modal">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-ulmrn805J0"
+                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-ulmvXKyFPS"
                                 data-interval="5000" data-bs-interval="5000">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -390,31 +390,31 @@
                                 </div>
                                 <ol class="carousel-indicators">
                                     <li data-slide-to="0" data-bs-slide-to="0" class="active"
-                                        data-target="#lb-ulmrn805J0" data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="2" data-bs-slide-to="2" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="3" data-bs-slide-to="3" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="4" data-bs-slide-to="4" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="5" data-bs-slide-to="5" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="6" data-bs-slide-to="6" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="7" data-bs-slide-to="7" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="8" data-bs-slide-to="8" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="9" data-bs-slide-to="9" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="10" data-bs-slide-to="10" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="11" data-bs-slide-to="11" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
-                                    <li data-slide-to="12" data-bs-slide-to="12" class="" data-target="#lb-ulmrn805J0"
-                                        data-bs-target="#lb-ulmrn805J0"></li>
+                                        data-target="#lb-ulmvXKyFPS" data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="2" data-bs-slide-to="2" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="3" data-bs-slide-to="3" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="4" data-bs-slide-to="4" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="5" data-bs-slide-to="5" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="6" data-bs-slide-to="6" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="7" data-bs-slide-to="7" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="8" data-bs-slide-to="8" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="9" data-bs-slide-to="9" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="10" data-bs-slide-to="10" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="11" data-bs-slide-to="11" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
+                                    <li data-slide-to="12" data-bs-slide-to="12" class="" data-target="#lb-ulmvXKyFPS"
+                                        data-bs-target="#lb-ulmvXKyFPS"></li>
 
 
 
@@ -427,12 +427,12 @@
                                     aria-label="Close">
                                 </a>
                                 <a class="carousel-control-prev carousel-control" role="button" data-slide="prev"
-                                    data-bs-slide="prev" href="#lb-ulmrn805J0">
+                                    data-bs-slide="prev" href="#lb-ulmvXKyFPS">
                                     <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Previous</span>
                                 </a>
                                 <a class="carousel-control-next carousel-control" role="button" data-slide="next"
-                                    data-bs-slide="next" href="#lb-ulmrn805J0">
+                                    data-bs-slide="next" href="#lb-ulmvXKyFPS">
                                     <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Next</span>
                                 </a>
