--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
   </noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=7ur4sD">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=7ur4sD" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=7VNs4L">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=7VNs4L" type="text/css">
 
 
 
@@ -100,7 +100,7 @@
 
   <section data-bs-version="5.1" class="header16 cid-ukw1KNUdRN mbr-fullscreen mbr-parallax-background" id="header17-c">
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
     <div class="container-fluid">
       <div class="row">
         <div class="content-wrap col-12 col-md-5">
@@ -187,7 +187,7 @@
             <img src="assets/images/img-20240804-wa0092.jpeg" alt="">
           </div>
           <div class="grid-item">
-            <img src="assets/images/img-20240804-wa0117-1.jpeg" alt="">
+            <img src="assets/images/imagem-do-whatsapp-de-2024-08-13-s-12.43.36-ae869d6e.jpeg" alt="">
           </div>
           <div class="grid-item">
             <img src="assets/images/img-20240804-wa0064.jpg" alt="">
@@ -278,10 +278,10 @@
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">
                 Cuiabá - MT</h5>
-              <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5"><strong>Clinica de Saúde Mental e
+              <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5"><strong>Clínica de Saúde Mental e
                   Fisioterapia</strong></h6>
 
-              <div class="mbr-section-btn item-footer"><a href="clinica terapias-especiais-cuiaba.html"
+              <div class="mbr-section-btn item-footer"><a href="clinica-saude-mental-fisioterapia.html"
                   class="btn item-btn btn-primary display-7">Saiba Mais</a></div>
             </div>
           </div>
